changed asset path

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </div>
             <div class="tcard-right">
                 <div class="img-holder">
-                    <img src="/public/assets/images/temp.jpg" alt="my profile pic, the mark of envy from overlord (anime)">
+                    <img src="/assets/images/temp.jpg" alt="my profile pic, the mark of envy from overlord (anime)">
                 </div>
             </div>
         </div>
@@ -53,36 +53,36 @@
         <div class="info-container">
             
             <div class="info-instance-container">
-                <img src="/public/assets/images/envelope-fill.svg" alt="email icon" style="width: 25px; padding-right: 10px;">
+                <img src="/assets/images/envelope-fill.svg" alt="email icon" style="width: 25px; padding-right: 10px;">
                 <p id="smail-1" style="min-width: 260px; letter-spacing: 0.3px;">* * * *</p>
                 <button onclick="showEInfo(['stzagakrak', 'ics', 'forth', 'gr'], this, 'smail-1')" style="height: 30px; width: 55px; align-self: center; border:none; font-family: 'Open Sans'; border-radius: 5px; background-color: #D9D9D9; color: black;">Reveal</button>
             </div>
             <div class="info-instance-container">
-                <img src="/public/assets/images/envelope-fill.svg" alt="email icon" style="width: 25px; padding-right: 10px;">
+                <img src="/assets/images/envelope-fill.svg" alt="email icon" style="width: 25px; padding-right: 10px;">
                 <p id="smail-2" style="min-width: 260px; letter-spacing: 0.3px;">* * * *</p>
                 <button onclick="showEInfo(['stzagakrak', 'gmail','com'], this, 'smail-2')" style="height: 30px; width: 55px; align-self: center; border:none; font-family: 'Open Sans'; border-radius: 5px; background-color: #D9D9D9; color: black;">Reveal</button>
             </div>
             <div class="info-instance-container">
-                <img src="/public/assets/images/envelope-fill.svg" alt="email icon" style="width: 25px; padding-right: 10px;">
+                <img src="/assets/images/envelope-fill.svg" alt="email icon" style="width: 25px; padding-right: 10px;">
                 <p id="smail-3" style="min-width: 260px; letter-spacing: 0.3px;">* * * *</p>
                 <button onclick="showEInfo(['csd4279', 'csd', 'uoc', 'gr'], this, 'smail-3')" style="height: 30px; width: 55px; align-self: center; border:none; font-family: 'Open Sans'; border-radius: 5px; background-color: #D9D9D9; color: black;">Reveal</button>
             </div>
             <div class="info-instance-container">
-                <img src="/public/assets/images/geo-alt-fill.svg" alt="email icon" style="width: 25px; padding-right: 10px;">
+                <img src="/assets/images/geo-alt-fill.svg" alt="email icon" style="width: 25px; padding-right: 10px;">
                 <p style="min-width: 300px; letter-spacing: 0.3px; text-align: end;">Estauromenos, Heraklion, 71410</p>
             </div>
             <div class="info-instance-container">
-                <img src="/public/assets/images/telephone-fill.svg" alt="email icon" style="width: 25px; padding-right: 10px;">
+                <img src="/assets/images/telephone-fill.svg" alt="email icon" style="width: 25px; padding-right: 10px;">
                 <p id="sphone-1" style="min-width: 260px; letter-spacing: 0.3px;">* * * *</p>
                 <button onclick="showPInfo(['+30', '698', '803', '7929'], this, 'sphone-1')" style="height: 30px; width: 55px; align-self: center; border:none; font-family: 'Open Sans'; border-radius: 5px; background-color: #D9D9D9; color: black;">Reveal</button>
             </div>
             <div class="info-instance-container">
-                <img src="/public/assets/images/discord.svg" alt="email icon" style="width: 25px; padding-right: 10px;">
+                <img src="/assets/images/discord.svg" alt="email icon" style="width: 25px; padding-right: 10px;">
                 <p id="discord-1" style="min-width: 260px; letter-spacing: 0.3px;">* * * *</p>
                 <button onclick="showPInfo(['Tzagkaris#4044'], this, 'discord-1')" style="height: 30px; width: 55px; align-self: center; border:none; font-family: 'Open Sans'; border-radius: 5px; background-color: #D9D9D9; color: black;">Reveal</button>
             </div>
             <div class="info-instance-container">
-                <img src="/public/assets/images/github.svg" alt="git icon" style="width: 25px; padding-right: 10px;">
+                <img src="/assets/images/github.svg" alt="git icon" style="width: 25px; padding-right: 10px;">
                 <p id="git-1" style="min-width: 300px; letter-spacing: 0.3px; text-align: end;"><a style="text-decoration: none;" href="https://github.com/stzagkarak">stzagkarak</a> , <a style="text-decoration: none;" href="https://github.com/tzagkaris">csd4279</a></p>
             </div>
 
